# Agentic-Core-Track

./: pyproject.toml
Section6_TraditionalML_To_DL_Fine_Tuning/: day2.ipynb  day5.ipynb  deep_neural_network.ipynb
Section6_TraditionalML_To_DL_Fine_Tuning/jsonl/: fine_tune_train.jsonl  fine_tune_validation.jsonl
Section7_Fine_Tuning_Open_Source/: finetune_data_prep.ipynb
Section7_Fine_Tuning_Open_Source/pricer/: batch.py  deep_neural_network.py  evaluator.py  items.py  loaders.py  parser.py  preprocessor.py
Section8_Autonomous_Multi_Agent_System/: 1_Specialist_Agent.ipynb  2_RAG.ipynb  3_Deal_Scanner.ipynb  4_Building_Agentic_AI.ipynb  hello.py  pricer_ephemeral.py  pricer_service.py
Section8_Autonomous_Multi_Agent_System/agents/: agent.py  autonomous_planning_agent.py  deals.py  deep_neural_network.py  ensemble_agent.py  frontier_agent.py  items.py  messaging_agent.py  preprocessor.py
