[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "autogen-agentchat>=0.4.9.2",
    "autogen-ext[grpc,mcp,ollama,openai]>=0.4.9.2",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "chromadb>=1.5.8",
    "datasets==3.6.0",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.6",
    "gradio>=5.22.0",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.11.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.5",
    "jupyter-dash>=0.4.2",
    "jupyterlab>=4.5.6",
    "langchain>=1.2.15",
    "langchain-anthropic>=0.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.3.20",
    "langchain-core>=1.3.0",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.9",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langsmith>=0.3.18",
    "litellm>=1.83.0",
    "llama-index>=0.14.22",
    "lxml>=5.3.1",
    "matplotlib>=3.10.8",
    "mcp-server-fetch>=2025.1.17",
    "mcp[cli]>=1.5.0",
    "modal>=1.4.2",
    "numpy>=2.4.1",
    "ollama>=0.6.1",
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "pandas>=2.3.3",
    "playwright>=1.51.0",
    "plotly>=6.0.1",
    "polygon-api-client>=1.14.5",
    "protobuf==5.29.3",
    "psutil>=7.0.0",
    "pydub>=0.25.1",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "semantic-kernel>=1.25.0",
    "sendgrid>=6.11.0",
    "sentence-transformers>=5.4.1",
    "setuptools>=78.1.0",
    "smithery>=0.1.0",
    "speedtest-cli>=2.1.3",
    "torch>=2.11.0",
    "tqdm>=4.67.1",
    "transformers>=5.5.4",
    "wandb>=0.26.0",
    "wikipedia>=1.4.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
